# esp32-tang

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  PROVISIONING.md  RAM_ENCRYPTION_PLAN.md  README.md  SECURITY_HARDENING.md  compute_csp_hashes.py  flake.nix  partitions.csv  sdkconfig.defaults
.github/prompts/: OTA.prompt.md  teeSecureStorageKeyPersistence.prompt.md
components/tang_tee_service/: CMakeLists.txt  sec_srv_tbl_tang.yml  tang_tee_service.c  tee_project.cmake
components/tang_tee_service/include/: tang_tee_service.h
main/: CMakeLists.txt  Kconfig.projbuild  TangServer.h  atecc608a.h  atecc608b_config_zone.h  crypto.h  encoding.h  handlers.h  helpers.h  idf_component.yml  jwe.h  main.cpp  provision.h  provision_handlers.h  provision_web_page.h  tang_handlers.h  tang_storage.h  wifi_prov_handlers.h  wifi_prov_page.h  yfromx.h  zk_auth.h  zk_handlers.h  zk_web_page.h
misc/: atecc608b_config.py  atecc608b_devconfig.json  atecc608b_tcustom_factory_config.json  devconfig.txt  ec_key.pem  factory_config.txt  pubkeys.pem
